--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
     <h1 class="sub-title">My Work</h1>
     <div class="work-list">
         <div class="work">
-            <img src="C:\Users\andja\OneDrive\Desktop\personal protofolio\images\project11.png">
+            <img src="images/project11.png">
             <div class="layer">
             <h3>Fitness center</h3>
             <p>This Fitness Center Management System, developed with C#, provides a seamless experience for both fitness center management and members,
                  helping to enhance operational efficiency while improving customer satisfaction.</p>
-            <a href="C:\Users\andja\OneDrive\Desktop\personal protofolio\images\gym prensation.pptx"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="images/gym prensation.pptx"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>
         </div>
         <div class="work">
-            <img src="C:\Users\andja\OneDrive\Desktop\personal protofolio\images\project1.jpg" >
+            <img src="images/project1.jpg" >
             <div class="layer">
             <h3>DDR4</h3>
             <p>DDR4 RAM provides faster speeds, lower power consumption, and higher capacities than previous generations, 
@@ -119,12 +119,12 @@
         </div>
     </div>
         <div class="work">
-            <img src="C:\Users\andja\OneDrive\Desktop\personal protofolio\images\project22.png">
+            <img src="images/project22.png">
             <div class="layer">
             <h3>Cybercrime</h3>
             <p>English Project:Cybercrime remains one of the most significant and evolving threats in the digital age, 
                 impacting individuals, businesses, and governments alike.</p>
-            <a href="C:\Users\andja\OneDrive\Desktop\personal protofolio\images\english project - Copy.pptx"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="images/english project - Copy.pptx"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>
     </div>
     </div>
@@ -156,7 +156,7 @@
                  learning, and image processing. As more tools and libraries become WebAssembly-friendly, 
                  front-end developers will need to familiarize themselves with this emerging technology to build 
                  faster and more efficient web applications.</p>
-                <a href="C:\Users\andja\OneDrive\Desktop\personal protofolio\blog.html" target=_"blank">Read More</a>
+                <a href="blog.html" target=_"blank">Read More</a>
             </div>
         </div>
 </div>
